--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "malta-css-uglify",
-  "version": "1.0.4",
-  "description": "Malta plugin to uglify css",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://fedeghe@github.com/fedeghe/malta-css-uglify.git"
-  },
-  "keywords": [
-    "malta",
-    "malta plugin",
-    "malta css uglify",
-    "malta css uglify plugin"
-  ],
-  "author": "Federico Ghedina <federico.ghedina@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/fedeghe/malta-css-uglify/issues"
-  },
-  "dependencies": {
-    "malta": ">=3.8.14",
-    "uglifycss": "0.0.25"
-  },
-  "main": "./index.js"
+    "name": "malta-css-uglify",
+    "version": "1.0.4",
+    "description": "Malta plugin to uglify css",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://fedeghe@github.com/fedeghe/malta-css-uglify.git"
+    },
+    "keywords": [
+        "malta",
+        "malta plugin",
+        "malta css uglify",
+        "malta css uglify plugin"
+    ],
+    "author": "Federico Ghedina <fedeghe@gmail.com>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/fedeghe/malta-css-uglify/issues"
+    },
+    "dependencies": {
+        "malta": ">=3.8.14",
+        "uglifycss": "0.0.25"
+    },
+    "main": "./index.js"
 }
