--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "url": "https://github.com/fedeghe/malta-css-uglify/issues"
     },
     "dependencies": {
-        "malta": ">=3.8.14",
+        "malta": "^4.0.4",
         "uglifycss": "0.0.25"
     },
     "main": "./index.js"
